cabal-version: 1.12
name: reflex-app
version: 0.1.0
build-type: Simple

library
  default-language: Haskell2010
  exposed-modules:
      Lib
  hs-source-dirs:
      backend
  build-depends:
      aeson
    , aeson-gadt-th
    , base
    , binary
    , bytestring
    , hasql
    , hasql-notifications
    , http-types
    , lens
    , reflex
    , reflex-dom
    , reflex-gadt-api
    , time
    , wai
    , wai-cors
    , wai-extra
    , warp
